// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load station status load 1 with no queues: load 1 with no queues 1`] = `
Object {
  "castings": Array [
    Object {
      "Action": Object {
        "ElapsedMachiningTime": undefined,
        "ExpectedRemainingMachiningTime": undefined,
        "LoadOntoFace": 1,
        "LoadOntoPallet": "1",
        "PathAfterLoad": 1,
        "ProcessAfterLoad": 1,
        "Program": undefined,
        "Type": "Loading",
        "UnloadIntoQueue": undefined,
      },
      "JobUnique": "aaa-offline-2018-01-01",
      "Location": Object {
        "CurrentQueue": undefined,
        "Face": undefined,
        "Pallet": undefined,
        "QueuePosition": undefined,
        "Type": "Free",
      },
      "MaterialID": 100663,
      "PartName": "bbb",
      "Path": 1,
      "Process": 1,
      "Serial": "NRWGM",
      "SignaledInspections": Array [],
      "WorkorderId": undefined,
    },
  ],
  "face": HashMap {
    "hamt": Map {
      "_config": Object {
        "hash": [Function],
        "keyEq": [Function],
      },
      "_edit": 0,
      "_editable": 0,
      "_root": Object {
        "_modify": [Function],
        "children": Array [
          Object {
            "_modify": [Function],
            "edit": NaN,
            "hash": 1,
            "key": 1,
            "type": 1,
            "value": Array [
              Object {
                "Action": Object {
                  "ElapsedMachiningTime": undefined,
                  "ExpectedRemainingMachiningTime": undefined,
                  "LoadOntoFace": 2,
                  "LoadOntoPallet": "1",
                  "PathAfterLoad": 1,
                  "ProcessAfterLoad": 2,
                  "Program": undefined,
                  "Type": "Loading",
                  "UnloadIntoQueue": undefined,
                },
                "JobUnique": "aaa-offline-2018-01-01",
                "Location": Object {
                  "CurrentQueue": undefined,
                  "Face": 1,
                  "Pallet": "1",
                  "QueuePosition": undefined,
                  "Type": "OnPallet",
                },
                "MaterialID": 100432,
                "PartName": "aaa",
                "Path": 1,
                "Process": 1,
                "Serial": "NBTGI",
                "SignaledInspections": Array [],
                "WorkorderId": undefined,
              },
            ],
          },
          Object {
            "_modify": [Function],
            "edit": NaN,
            "hash": 2,
            "key": 2,
            "type": 1,
            "value": Array [
              Object {
                "Action": Object {
                  "ElapsedMachiningTime": undefined,
                  "ExpectedRemainingMachiningTime": undefined,
                  "LoadOntoFace": undefined,
                  "LoadOntoPallet": undefined,
                  "PathAfterLoad": undefined,
                  "ProcessAfterLoad": undefined,
                  "Program": undefined,
                  "Type": "UnloadToCompletedMaterial",
                  "UnloadIntoQueue": undefined,
                },
                "JobUnique": "aaa-offline-2018-01-01",
                "Location": Object {
                  "CurrentQueue": undefined,
                  "Face": 2,
                  "Pallet": "1",
                  "QueuePosition": undefined,
                  "Type": "OnPallet",
                },
                "MaterialID": 100316,
                "PartName": "aaa",
                "Path": 1,
                "Process": 2,
                "Serial": "MZRGY",
                "SignaledInspections": Array [],
                "WorkorderId": undefined,
              },
            ],
          },
        ],
        "edit": NaN,
        "mask": 6,
        "type": 3,
      },
      "_size": 2,
    },
  },
  "free": undefined,
  "loadNum": 1,
  "pallet": Object {
    "CurrentPalletLocation": Object {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 1,
    },
    "FixtureOnPallet": "fix1",
    "NewFixture": undefined,
    "NumFaces": 2,
    "OnHold": false,
    "Pallet": "1",
    "PercentMoveCompleted": undefined,
    "TargetLocation": undefined,
  },
  "queues": EmptyHashMap {
    "hamt": Object {},
  },
  "stationStatus": undefined,
}
`;

exports[`load station status load 2 with queue: load 2 with queue 1`] = `
Object {
  "castings": Array [],
  "face": HashMap {
    "hamt": Map {
      "_config": Object {
        "hash": [Function],
        "keyEq": [Function],
      },
      "_edit": 0,
      "_editable": 0,
      "_root": Object {
        "_modify": [Function],
        "edit": NaN,
        "hash": 1,
        "key": 1,
        "type": 1,
        "value": Array [
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": undefined,
              "LoadOntoPallet": undefined,
              "PathAfterLoad": undefined,
              "ProcessAfterLoad": undefined,
              "Program": undefined,
              "Type": "UnloadToCompletedMaterial",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "xxx-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": undefined,
              "Face": 1,
              "Pallet": "5",
              "QueuePosition": undefined,
              "Type": "OnPallet",
            },
            "MaterialID": 102097,
            "PartName": "xxx",
            "Path": 1,
            "Process": 1,
            "Serial": "MBZG4",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
        ],
      },
      "_size": 1,
    },
  },
  "free": undefined,
  "loadNum": 2,
  "pallet": Object {
    "CurrentPalletLocation": Object {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 2,
    },
    "FixtureOnPallet": "fix5",
    "NewFixture": undefined,
    "NumFaces": 1,
    "OnHold": false,
    "Pallet": "5",
    "PercentMoveCompleted": undefined,
    "TargetLocation": undefined,
  },
  "queues": HashMap {
    "hamt": Map {
      "_config": Object {
        "hash": [Function],
        "keyEq": [Function],
      },
      "_edit": 1,
      "_editable": 0,
      "_root": Object {
        "_modify": [Function],
        "edit": NaN,
        "hash": -1864829600,
        "key": "Queue1",
        "type": 1,
        "value": Array [
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": undefined,
              "LoadOntoPallet": undefined,
              "PathAfterLoad": undefined,
              "ProcessAfterLoad": undefined,
              "Program": undefined,
              "Type": "Waiting",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "aaa-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": "Queue1",
              "Face": undefined,
              "Pallet": undefined,
              "QueuePosition": 0,
              "Type": "InQueue",
            },
            "MaterialID": 104289,
            "PartName": "aaa",
            "Path": 1,
            "Process": 1,
            "Serial": "MRYHE",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": undefined,
              "LoadOntoPallet": undefined,
              "PathAfterLoad": undefined,
              "ProcessAfterLoad": undefined,
              "Program": undefined,
              "Type": "Waiting",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "xxx-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": "Queue1",
              "Face": undefined,
              "Pallet": undefined,
              "QueuePosition": 1,
              "Type": "InQueue",
            },
            "MaterialID": 104458,
            "PartName": "xxx",
            "Path": 1,
            "Process": 1,
            "Serial": "NBVHA",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": 1,
              "LoadOntoPallet": "5",
              "PathAfterLoad": 1,
              "ProcessAfterLoad": 1,
              "Program": undefined,
              "Type": "Loading",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "zzz-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": "Queue1",
              "Face": undefined,
              "Pallet": undefined,
              "QueuePosition": 2,
              "Type": "InQueue",
            },
            "MaterialID": 102304,
            "PartName": "zzz",
            "Path": 1,
            "Process": 1,
            "Serial": "MZQGQ",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
        ],
      },
      "_size": 1,
    },
  },
  "stationStatus": undefined,
}
`;

exports[`load station status load 3 with empty pallet: load 3 with empty pallet 1`] = `
Object {
  "castings": Array [],
  "face": EmptyHashMap {
    "hamt": Object {},
  },
  "free": undefined,
  "loadNum": 3,
  "pallet": undefined,
  "queues": HashMap {
    "hamt": Map {
      "_config": Object {
        "hash": [Function],
        "keyEq": [Function],
      },
      "_edit": 1,
      "_editable": 0,
      "_root": Object {
        "_modify": [Function],
        "edit": NaN,
        "hash": -1864829599,
        "key": "Queue2",
        "type": 1,
        "value": Array [
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": undefined,
              "LoadOntoPallet": undefined,
              "PathAfterLoad": undefined,
              "ProcessAfterLoad": undefined,
              "Program": undefined,
              "Type": "Waiting",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "ccc-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": "Queue2",
              "Face": undefined,
              "Pallet": undefined,
              "QueuePosition": 0,
              "Type": "InQueue",
            },
            "MaterialID": 104824,
            "PartName": "ccc",
            "Path": 1,
            "Process": 1,
            "Serial": "OBSGQ",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
          Object {
            "Action": Object {
              "ElapsedMachiningTime": undefined,
              "ExpectedRemainingMachiningTime": undefined,
              "LoadOntoFace": undefined,
              "LoadOntoPallet": undefined,
              "PathAfterLoad": undefined,
              "ProcessAfterLoad": undefined,
              "Program": undefined,
              "Type": "Waiting",
              "UnloadIntoQueue": undefined,
            },
            "JobUnique": "zzz-offline-2018-01-01",
            "Location": Object {
              "CurrentQueue": "Queue2",
              "Face": undefined,
              "Pallet": undefined,
              "QueuePosition": 1,
              "Type": "InQueue",
            },
            "MaterialID": 105125,
            "PartName": "zzz",
            "Path": 1,
            "Process": 1,
            "Serial": "MJSGU",
            "SignaledInspections": Array [],
            "WorkorderId": undefined,
          },
        ],
      },
      "_size": 1,
    },
  },
  "stationStatus": HashMap {
    "hamt": Map {
      "_config": Object {
        "hash": [Function],
        "keyEq": [Function],
      },
      "_edit": 1,
      "_editable": 0,
      "_root": Object {
        "_modify": [Function],
        "children": Array [
          Object {
            "_modify": [Function],
            "edit": 1,
            "hash": 185260807,
            "key": "Machine #1",
            "type": 1,
            "value": Object {
              "pal": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": "PT10M",
                      "ExpectedRemainingMachiningTime": "PT20M",
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": "prog-ccc-2",
                      "Type": "Machining",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "ccc-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 2,
                      "Pallet": "4",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 101805,
                    "PartName": "ccc",
                    "Path": 1,
                    "Process": 2,
                    "Serial": "OBQGU",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": undefined,
                      "Type": "Waiting",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "ccc-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "4",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 101662,
                    "PartName": "ccc",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "NRWGI",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "Machine",
                    "loc": "Machine",
                    "num": 1,
                  },
                  "FixtureOnPallet": "fix4",
                  "NewFixture": undefined,
                  "NumFaces": 2,
                  "OnHold": false,
                  "Pallet": "4",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
            },
          },
          Object {
            "_modify": [Function],
            "edit": 1,
            "hash": 185260808,
            "key": "Machine #2",
            "type": 1,
            "value": Object {
              "pal": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": "PT10M",
                      "ExpectedRemainingMachiningTime": "PT50M",
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": "prog-zzz",
                      "Type": "Machining",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "zzz-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "6",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 102431,
                    "PartName": "zzz",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "NBTGE",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "Machine",
                    "loc": "Machine",
                    "num": 2,
                  },
                  "FixtureOnPallet": "fix6",
                  "NewFixture": undefined,
                  "NumFaces": 1,
                  "OnHold": false,
                  "Pallet": "6",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
              "queued": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": undefined,
                      "Type": "Waiting",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "yyy-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "7",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 102715,
                    "PartName": "yyy",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "NZRGU",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": undefined,
                      "Type": "Waiting",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "yyy-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "7",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 103096,
                    "PartName": "yyy",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "MBZGY",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "Machine",
                    "loc": "MachineQueue",
                    "num": 2,
                  },
                  "FixtureOnPallet": "fix7",
                  "NewFixture": undefined,
                  "NumFaces": 1,
                  "OnHold": false,
                  "Pallet": "7",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
            },
          },
          Object {
            "_modify": [Function],
            "edit": 1,
            "hash": 185260809,
            "key": "Machine #3",
            "type": 1,
            "value": Object {
              "pal": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": "PT10M",
                      "ExpectedRemainingMachiningTime": "PT45M",
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": "prog-xxx",
                      "Type": "Machining",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "xxx-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "8",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 103335,
                    "PartName": "xxx",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "MZTGU",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "Machine",
                    "loc": "Machine",
                    "num": 3,
                  },
                  "FixtureOnPallet": "fix8",
                  "NewFixture": undefined,
                  "NumFaces": 1,
                  "OnHold": false,
                  "Pallet": "8",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
            },
          },
          Object {
            "_modify": [Function],
            "edit": NaN,
            "hash": -2073182212,
            "key": "L/U #1",
            "type": 1,
            "value": Object {
              "pal": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": undefined,
                      "Type": "UnloadToCompletedMaterial",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "aaa-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 2,
                      "Pallet": "1",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 100316,
                    "PartName": "aaa",
                    "Path": 1,
                    "Process": 2,
                    "Serial": "MZRGY",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": 2,
                      "LoadOntoPallet": "1",
                      "PathAfterLoad": 1,
                      "ProcessAfterLoad": 2,
                      "Program": undefined,
                      "Type": "Loading",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "aaa-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "1",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 100432,
                    "PartName": "aaa",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "NBTGI",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "L/U",
                    "loc": "LoadUnload",
                    "num": 1,
                  },
                  "FixtureOnPallet": "fix1",
                  "NewFixture": undefined,
                  "NumFaces": 2,
                  "OnHold": false,
                  "Pallet": "1",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
            },
          },
          Object {
            "_modify": [Function],
            "edit": 1,
            "hash": -2073182211,
            "key": "L/U #2",
            "type": 1,
            "value": Object {
              "pal": Object {
                "material": Array [
                  Object {
                    "Action": Object {
                      "ElapsedMachiningTime": undefined,
                      "ExpectedRemainingMachiningTime": undefined,
                      "LoadOntoFace": undefined,
                      "LoadOntoPallet": undefined,
                      "PathAfterLoad": undefined,
                      "ProcessAfterLoad": undefined,
                      "Program": undefined,
                      "Type": "UnloadToCompletedMaterial",
                      "UnloadIntoQueue": undefined,
                    },
                    "JobUnique": "xxx-offline-2018-01-01",
                    "Location": Object {
                      "CurrentQueue": undefined,
                      "Face": 1,
                      "Pallet": "5",
                      "QueuePosition": undefined,
                      "Type": "OnPallet",
                    },
                    "MaterialID": 102097,
                    "PartName": "xxx",
                    "Path": 1,
                    "Process": 1,
                    "Serial": "MBZG4",
                    "SignaledInspections": Array [],
                    "WorkorderId": undefined,
                  },
                ],
                "pallet": Object {
                  "CurrentPalletLocation": Object {
                    "group": "L/U",
                    "loc": "LoadUnload",
                    "num": 2,
                  },
                  "FixtureOnPallet": "fix5",
                  "NewFixture": undefined,
                  "NumFaces": 1,
                  "OnHold": false,
                  "Pallet": "5",
                  "PercentMoveCompleted": undefined,
                  "TargetLocation": undefined,
                },
              },
            },
          },
        ],
        "edit": 1,
        "mask": 805307264,
        "type": 3,
      },
      "_size": 5,
    },
  },
}
`;
